--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,13 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements":[
+                {
+                  "replace": "src/environments/environments.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+              ,  
               "budgets": [
                 {
                   "type": "initial",
